增加 - 全部完成、全部取消、删除已完成

--- a/css/index.css
+++ b/css/index.css
@@ -295,3 +295,11 @@ img {
 	outline: none;
 	border: none;
 }
+
+.all {
+	/*text-decoration: none;*/
+	color: #EFEEEE;
+	font-size: 0.6em;
+	float: right;
+	margin-right: 10px;
+}
