--- a/css/index.css
+++ b/css/index.css
@@ -3,117 +3,10 @@ body {
 	color: #EFEEEE;
 	font-family: "mv boli";
 	margin: 0;
-	background-image: url(../image/slide_5.jpg);
-}
-
-ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-#color-variations {
-	padding: 0.65em;
-	-webkit-transition: 0.5s;
-	-o-transition: 0.5s;
-	transition: 0.5s;
-	max-width: 140px;
-	position: fixed;
-	left: 0;
-	top: 3em;
-	z-index: 100;
-	background: #fff;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-	-webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	-moz-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	-ms-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-}
-
-#color-variations.sleep {
-	margin-left: -163px;
-}
-
-#color-variations h3 {
-	text-align: center;
-	font-size: 11px;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	color: #777;
-	margin: 0 0 1em 0;
-	padding: 0;
-}
-
-#color-variations li {
-	padding: 0;
-	margin: 0;
-	display: inline;
-}
-
-#color-variations li a {
-	width: 20px;
-	height: 20px;
-	position: relative;
-	float: left;
-	margin: 5px;
-}
-
-#color-variations li a[data-theme="blue"] {
-	background-color: #6173f4;
-}
-
-#color-variations li a[data-theme="pink"] {
-	background-color: #f64662;
-}
-
-#color-variations li a[data-theme="sapphire"] {
-	background-color: #2185d5;
-}
-
-#color-variations li a[data-theme="turquoise"] {
-	background-color: #00b8a9;
-}
-
-#color-variations li a[data-theme="orange"] {
-	background-color: #ff6600;
-}
-
-#color-variations li a[data-theme="lightblue"] {
-	background-color: #5585b5;
-}
-
-#color-variations li a[data-theme="brown"] {
-	background-color: #a03232;
-}
-
-#color-variations li a[data-theme="green"] {
-	background-color: #65d269;
-}
-
-#option-toggle {
-	position: absolute;
-	right: 0;
-	top: 0;
-	margin-top: 5px;
-	margin-right: -30px;
-	width: 30px;
-	height: 30px;
-	background: #f64662;
-	text-align: center;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-	color: #fff;
-	cursor: pointer;
-	-webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	-moz-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	-ms-box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-	box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
-}
-
-img {
-	max-width: 100%;
-	max-height: 100%;
+	background-image: url(../image/img_10.jpg);
+	background-size: 100% 100%;
+	-moz-background-size: 100% 100%;
+	-webkit-background-size: 100% 100%;
 }
 
 /*input*/
@@ -131,17 +24,15 @@ img {
 
 .input {
 	position: relative;
-	z-index: 1;
 	display: block;
 	max-width: 400px;
-	font-size: 80%;
-	width: -moz-calc(100% - 2em);
-	width: -webkit-calc(100% - 2em);
-	width: calc(100% - 2em);
 	vertical-align: top;
 	overflow: hidden;
 	margin: 1em auto 2em;
 	background-color: #EFEEEE;
+	width: calc(100% - 2em);
+	width: -moz-calc(100% - 2em);
+	width: -webkit-calc(100% - 2em);
 }
 
 .input-field {
@@ -156,13 +47,12 @@ img {
 	font-size: 80%;
 	border: none;
 	outline: none;
-	border-radius: 0;
-	-webkit-appearance: none;
-	/* for box shadows to show on iOS */
-	-webkit-transition: -webkit-transform 0.5s;
 	transition: transform 0.5s;
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-webkit-transition: -webkit-transform 0.5s;
+	-moz-transition: -moz-transform 0.5s;
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-moz-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .input-label {
@@ -173,19 +63,17 @@ img {
 	padding: 0 0.5em;
 	color: #6a7989;
 	font-weight: bold;
-	user-select: none;
 	text-align: left;
 	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-webkit-transform-origin: 0% 50%;
 	transform-origin: 0% 50%;
-	-webkit-transition: -webkit-transform 0.5s;
+	-webkit-transform-origin: 0% 50%;
+	-moz-transform-origin: 0% 50%;
 	transition: transform 0.5s;
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-webkit-transition: -webkit-transform 0.5s;
+	-moz-transition: -moz-transform 0.5s;
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	-moz-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
 .input-label-content {
@@ -195,27 +83,25 @@ img {
 	width: 100%;
 }
 
-.input-field:focus,
-.input--filled .input-field {
-	-webkit-transform: translate3d(100%, 0, 0);
+.input-field:focus {
 	transform: translate3d(100%, 0, 0);
-	-webkit-transition-delay: 0.06s;
-	transition-delay: 0.06s;
+	-webkit-transform: translate3d(100%, 0, 0);
+	-moz-transform: translate3d(100%, 0, 0);
 }
 
-.input-field:focus+.input-label,
-.input--filled .input-label {
-	-webkit-transform: translate3d(60%, 0, 0);
+.input-field:focus+.input-label {
 	transform: translate3d(60%, 0, 0);
+	-webkit-transform: translate3d(60%, 0, 0);
+	-moz-transform: translate3d(60%, 0, 0);
 	pointer-events: none;
 }
 
 @media screen and (max-width: 34em) {
 
-	.input-field:focus+.input-label,
-	.input--filled .input-label {
-		-webkit-transform: translate3d(65%, 0, 0) scale3d(0.65, 0.65, 1);
+	.input-field:focus+.input-label {
 		transform: translate3d(65%, 0, 0) scale3d(0.65, 0.65, 1);
+		-webkit-transform: translate3d(65%, 0, 0) scale3d(0.65, 0.65, 1);
+		-moz-transform: translate3d(65%, 0, 0) scale3d(0.65, 0.65, 1);
 		pointer-events: none;
 	}
 }
@@ -225,11 +111,11 @@ img {
 .list {
 	display: block;
 	max-width: 400px;
-	width: -moz-calc(100% - 1em);
-	width: -webkit-calc(100% - 1em);
-	width: calc(100% - 1em);
 	margin: 0 auto;
 	text-align: left;
+	width: calc(100% - 1em);
+	width: -moz-calc(100% - 1em);
+	width: -webkit-calc(100% - 1em);
 }
 
 .list li {
@@ -243,21 +129,12 @@ img {
 	border-left: 8px solid #FFEC8B;
 }
 
-.list li input {
-	position: absolute;
-	top: 2px;
-	left: 10px;
-	width: 22px;
-	height: 22px;
-}
-
 .list li a {
 	position: absolute;
 	display: block;
 	top: 4px;
 	width: 24px;
 	height: 24px;
-	line-height: 32px;
 	font-weight: bold;
 	border-radius: 32px;
 	background-color: #FFEC8B;
@@ -288,11 +165,11 @@ img {
 
 #edit {
 	display: block;
+	position: absolute;
+	top: 2px;
+	bottom: 2px;
 	margin: 0;
 	padding: 0;
-	height: 70%;
-	width: 70%;
-	outline: none;
 	border: none;
 }
 
@@ -302,4 +179,112 @@ img {
 	font-size: 0.6em;
 	float: right;
 	margin-right: 10px;
+}
+
+/* color variations*/
+
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+#color-variations {
+	padding: 0.65em;
+	max-width: 140px;
+	position: fixed;
+	left: 0;
+	top: 3em;
+	z-index: 100;
+	background: #fff;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	transition: 0.5s;
+	-webkit-transition: 0.5s;
+	-moz-transition: 0.5s;
+	box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+}
+
+#color-variations.sleep {
+	margin-left: -163px;
+}
+
+#color-variations h3 {
+	text-align: center;
+	font-size: 11px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: #777;
+	margin: 0 0 1em 0;
+	padding: 0;
+}
+
+#color-variations li {
+	padding: 0;
+	margin: 0;
+	display: inline;
+}
+
+#color-variations li a {
+	width: 20px;
+	height: 20px;
+	float: left;
+	margin: 5px;
+}
+
+#color-variations li a[data-theme="blue"] {
+	background-color: #6173f4;
+}
+
+#color-variations li a[data-theme="pink"] {
+	background-color: #f64662;
+}
+
+#color-variations li a[data-theme="sapphire"] {
+	background-color: #2185d5;
+}
+
+#color-variations li a[data-theme="turquoise"] {
+	background-color: #00b8a9;
+}
+
+#color-variations li a[data-theme="orange"] {
+	background-color: #ff6600;
+}
+
+#color-variations li a[data-theme="yellow"] {
+	background-color: #FFEC8B;
+}
+
+#color-variations li a[data-theme="brown"] {
+	background-color: #a03232;
+}
+
+#color-variations li a[data-theme="green"] {
+	background-color: #65d269;
+}
+
+#setting {
+	position: absolute;
+	right: 0;
+	top: 0;
+	margin-top: 5px;
+	margin-right: -30px;
+	width: 30px;
+	height: 30px;
+	background: #f64662;
+	text-align: center;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	box-shadow: 0 0 9px 0 rgba(0, 0, 0, .1);
+	-webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+	-ms-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.2);
+}
+
+img {
+	max-width: 100%;
+	max-height: 100%;
 }
