--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,12 @@ body {
 	color: #EFEEEE;
 	font-family: "mv boli";
 	margin: 0;
+	padding: 0;
 	background-image: url(../image/img_10.jpg);
-	background-size: 100% 100%;
+	/*background-size: 100% 100%;
 	-moz-background-size: 100% 100%;
-	-webkit-background-size: 100% 100%;
+	-webkit-background-size: 100% 100%;*/
+	background-size: cover;
 }
 
 /*input*/
